refactor: Atualizar contador de visitas e reorganizar seção de perfil

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="container">
         <!-- Header -->
         <header class="header">
-            <div class="profile">
+            <div class="visit">
                 <p>👁️ Visitas:</p>
-                <img src="https://counter.seku.su/cmoe?name=gabrielmour46546874684a&theme=rule34" alt="Contador de visitas">
-
+                ![Visitor Count](https://komarev.com/ghpvc/?username=gabrielmouras)</div>
+            <div class="profile">
                 <img src="https://github.com/GabrielMouraS.png" alt="Gabriel Moura" class="profile-image">
                 <h1 class="name">Gabriel Moura dos Santos</h1>
                 <p class="title">Desenvolvedor Backend & Técnico de Informática</p>
