fix: Corrigir contagem de visitas para usar imagem do contador

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <header class="header">
             <div class="visit">
                 <p>👁️ Visitas:</p>
-                ![Visitor Count](https://komarev.com/ghpvc/?username=gabrielmouras)</div>
+                <img src="https://hitcounter.pythonanywhere.com/count/tag.svg" alt="Hits">
+            </div>
             <div class="profile">
                 <img src="https://github.com/GabrielMouraS.png" alt="Gabriel Moura" class="profile-image">
                 <h1 class="name">Gabriel Moura dos Santos</h1>
