fix: Corrigir exibição do contador de visitas no cabeçalho

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <!-- Header -->
         <header class="header">
             <div class="visit">
-                <p>👁️ Visitas:</p>
-                <img src="https://hitcounter.pythonanywhere.com/count/tag.svg" alt="Hits">
+                <p>👁️ Visitas: <span id="contador">0</span></p>
             </div>
             <div class="profile">
                 <img src="https://github.com/GabrielMouraS.png" alt="Gabriel Moura" class="profile-image">
