Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="skill-tags">
                         <span class="skill-tag">C</span>
                         <span class="skill-tag">C++</span>
-                        <span class="skill-tag">C# (Arduino)</span>
+                        <span class="skill-tag">C#</span>
                         <span class="skill-tag">Python</span>
                         <span class="skill-tag">PHP</span>
                         <span class="skill-tag">JavaScript</span>
